Make project buildable
- Update default JvmArgs
- Change properties definitions
- Update module-info.java